# csad2125ki408ternooleh17

./: Doxyfile  README.md
.github/workflows/: blank.yml  ci.yml
Client/: SerialPort.cpp  SerialPort.h  TestClient.cpp  TikTakToe.cpp
Config/: CMakeLists.txt  CmakeLists.txt  CmakePresets.json  README.md  build.bat  config.json
Server/server/: server.ino
